# web

./: .gitignore  .npmrc  .prettierignore  20260425_bug_dropped_messages.md  ARCH.md  CLAUDE.md  CODEOWNERS  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  testing.md  tsconfig.json
app/: .env  .env.development  .gitignore  .prettierignore  AGENTS.md  README.md  _index.md  config.dev.yaml  design.md  index.html  package.json  postcss.config.mjs  pyproject.toml  url-map.yaml  vite.config.mts  vitest.config.mts
app/assets/: about.html  terms-of-service.html
app/assets/configs/: app-configs.yaml
app/assets/policies/: index.html  privacypolicy.html
app/src/: App.tsx  browserAdapter.client.ts  index.css  layout.tsx  main.tsx  token.tsx  vite-env.d.ts
app/src/auth/: googleServiceAccount.test.ts  googleServiceAccount.ts  oidcConfig.ts  types.ts
app/src/components/: CurrentDocInitializer.test.tsx  CurrentDocInitializer.tsx  DriveLinkCoordinatorHost.test.tsx  DriveLinkCoordinatorHost.tsx  DriveLinkStatusTab.tsx  DriveSyncStatusTab.test.tsx  DriveSyncStatusTab.tsx  NotFound.tsx  NotebookCommentsPanel.test.tsx  NotebookCommentsPanel.tsx  RunnerStatusTab.test.tsx  RunnerStatusTab.tsx  Toast.tsx  VersionInfoTab.tsx
app/src/config/: appConfig.ts
app/src/contexts/: BottomPaneContext.tsx  CellContext.tsx  CommentsPanelContext.tsx  ContentsStoreContext.tsx  CurrentDocContext.test.tsx  OutputContext.tsx  (+11 more)
app/test/: setup.ts
app/tools/: eslint_runner.mjs  prettier_runner.mjs  sync_codex_wasm_assets.mjs
(+425 files in other folders)
